--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
-fastapi
-uvicorn[standard]
-requests
-pydantic
+fastapi==0.115.0
+uvicorn[standard]==0.30.6
+httpx==0.27.2
+beautifulsoup4==4.12.3
+lxml==5.3.0
+pydantic==2.9.2
+python-dotenv==1.0.1
+sqlalchemy==2.0.34
+psycopg2-binary==2.9.9
+orjson==3.10.7
+phonenumberslite==8.13.45
