Expand example environment variables

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
 # Example environment variables
-DB_PATH=./app.db
+DATABASE_URL=postgresql://callshield:callshield@localhost:5432/callshield
+API_HOST=0.0.0.0
+API_PORT=8080
+PUBLISH_DIR=app/public
+IOS_CHUNK_SIZE=50000
+DELTA_MAX_LOOKBACK_DAYS=7
